<resources>
  <string name="app_name">Taller202501</string>
  <string name="boton_aumentar">Incrementar fuente</string>
  <string name="mensaje">HOLA MUNDO</string>
  <string name="texto_boton_home">Ir a ventana principal</string>
  <string name="texto_matematicas">Matematicas</string>
  <string name="texto_fisica">Fisica</string>
  <string name="texto_estadistica">Estadistica</string>
  <string name="text_opciones">Escoge la operación que deseas realizar</string>

</resources>
