<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".HomeActivity">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_weight="0.10"
    app:srcCompat="@mipmap/avatar" />

  <Button
    android:id="@+id/btnmatematicas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.54"
    android:text="@string/texto_matematicas" />

  <Button
    android:id="@+id/btnfisica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.54"
    android:text="@string/texto_fisica" />

  <Button
    android:id="@+id/btnestadistica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.54"
    android:text="@string/texto_estadistica" />

</LinearLayout>
